# bookmark-manager

./: HLint.hs  LICENSE  README.md  after.json  before.json  bookmark-manager.cabal  main.hs
ff-addon/: package.json
ff-addon/lib/: main.js
src/: BookmarkManager.hs  Utils.hs  main.hs
test/: TestBookmarkManager.hs  TestMain.hs
