name:                bookmark-manager
version:             0.1.0.0
author:              Anthony D'Ambrosio
maintainer:          nsa.anthony@gmail.com
--homepage:            https://github.com/Pancia/loki-lang
license:             MIT
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Bookmark Manager
description:         Bookmark Manager

--source-repository head
-- type:     git
--  location: https://github.com/Pancia/loki-lang

executable bookmark-manager
    main-is: main.hs
    Hs-Source-Dirs: .
    build-depends: base == 4.*,
                   cond == 0.4.*,
                   process == 1.2.*,
                   unix == 2.7.*,
                   tagsoup == 0.13.*,
                   split == 0.2.*,
                   containers == 0.5.*
    default-language: Haskell2010
