name:                bookmark-manager
version:             0.1.0.0
author:              Anthony D'Ambrosio
maintainer:          nsa.anthony@gmail.com
homepage:            https://github.com/Pancia/bookmark-manager
license:             MIT
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Bookmark Manager
description:         Bookmark Manager

source-repository head
    type:     git
    location: https://github.com/Pancia/bookmark-manager

executable bookmark-manager
    main-is: main.hs
    Hs-Source-Dirs: .,src
    build-depends: base == 4.*,
                   cond == 0.4.*,
                   process == 1.2.*,
                   unix == 2.7.*,
                   tagsoup == 0.13.*,
                   split == 0.2.*,
                   containers == 0.5.*,
                   bytestring == 0.10.*,
                   lens == 4.*,
                   wreq == 0.3.*,
                   mtl == 2.*,
                   http-client == 0.4.*
    default-language: Haskell2010

Test-suite test-bookmark-manager
    Main-Is: TestMain.hs
    Hs-Source-Dirs: .,test,src
    Type: exitcode-stdio-1.0
    Build-Depends: base == 4.*,
                   HTF == 0.12.2.*,
                   cond == 0.4.*,
                   process == 1.2.*,
                   unix == 2.7.*,
                   tagsoup == 0.13.*,
                   split == 0.2.*,
                   containers == 0.5.*,
                   bytestring == 0.10.*,
                   lens == 4.*,
                   wreq == 0.3.*,
                   mtl == 2.*,
                   http-client == 0.4.*
    default-language: Haskell2010
